# lava-gui

./: .flake8  .gitignore  LICENCE.md  Makefile  README.md  pyproject.toml  requirements-build.txt  requirements.txt
doc/: CREDITS.md  INSTALL.md  RELEASE-NOTES.md  USAGE.md  build-macos.md  build-windows.md  properties.xml  style.css
etc/: Makefile.macos  Makefile.windows  find-exe  jinja  lavagui.iss
etc/git-hooks/: pre-commit
src/: main.py
src/assets/help/: 01-usage.md  80-credits.md  90-licence.md  99-release-notes.md
src/lib/: __init__.py  config.py  utils.py
