[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LavaGui"
version = "2.3.0"
dynamic = ["dependencies"]
license = "BSD-3-Clause"
license-files = ["LICENCE.md"]
requires-python = ">=3.11"
authors = [
    { name = "Art Dorokhov" },
    { name = "Nyan Min Khant" },
    { name = "Alex Boul" },
]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.flet]
org = "au.com.originenergy"
product = "Lava"
company = "Origin Energy"
copyright = "Copyright (C) 2025 by Origin Energy"

[tool.flet.app]
path = "src"

[tool.black]

line-length = 100
skip-string-normalization = true
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.idea
    | \.tox
    | \.venv
    | build
    | docs
    | doc
    | dist
    | test
    | venv*
  )
)
'''

[tool.ruff]

line-length = 100
target-version = 'py311'
lint.select = [
    'D', 'E', 'F', 'W', 'C90', 'N', 'UP', 'YTT', 'S', 'B', 'A', 'C4',
    'ISC', 'ICN', 'PIE', 'T20', 'Q', 'RET', 'SLF',
    'SIM',  # Simplify
    # 'ARG' -- Less hassle to use PyCharm for this
    # Disabled for now:
    #   ANN - Type annotations (more heat than light at this point)
    'ERA',  # Commented out code
    'PL',
    'RUF',
]

lint.ignore = [
    'A005', # Shadows Python standard-library module
    'D202',
    'D203',
    'D212',
    'D409', # Section underline should match the length of its name - Flake and ruff disagree on this
    'ANN401',  # Allow Any type

    'S603',  # This is a false alarm as it triggers on every subprocess.check_output
    'S607',  # Starting a process with a partial path. This annoying if you need PATH
    'S608',  # SQL injection -- disabled temporarily -- will come back to this.

    'B904',  # Whining about raise ... from err
    'PIE790',  # Unnecessary pass. I like pass, so up yours.
    'T201',  # print found -- ridiculous.
    'Q003',  # Change outer quotes to avoid escaping inner quotes
    'SIM300',  # Yoda conditions
    'S110', # `try`-`except`-`pass` detected, consider logging the exception -- in your boot
    # Most of these are more annoying than useful.
    # No, I don't want to hear your point of view.
    'PLR',
    'PLW',
    'PLC',
    'PLR1722',  # Use `sys.exit()` instead of `exit`
    'PLR0912',  # Too many branches
    'PLR0913',  # Too many arguments to function call
    'PLR0915',  # Too many statements

    'RUF100',  # Unused `noqa` directive
    'RUF012',  # Temporary -- to be re-enabled: Mutable class attributes should be annotated with `typing.ClassVar`
    'RUF013',  # Temporary -- to be re-enabled: PEP 484 prohibits implicit `Optional`
]

exclude = [
    '.eggs',
    '.git',
    '.idea',
    '.tox',
    '.venv',
    'build',
    'docs',
    'doc',
    'dist',
    'test',
    'venv*',
]

[tool.ruff.lint.mccabe]

max-complexity = 50  # Yeah ... I know

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'double'
docstring-quotes = 'double'
